tests/snapshots/formats__nifti__brain.nii.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ brain.nii — NIfTI-1, 4×5×6 float32, "fillyfoal phantom"  [0x0+0x340]
  ▾ Header — NIfTI-1, 348 bytes, little-endian  [0x0+0x15c]
      sizeof_hdr: 348  [0x0+0x4]
      data_type (unused): ""  [0x4+0xa]
      db_name (unused): ""  [0xe+0x12]
      extents (unused): 0  [0x20+0x4]
      session_error (unused): 0  [0x24+0x2]
      regular (unused): 0  [0x26+0x1]
      dim_info: 0x0 — frequency unknown, phase unknown, slice unknown  [0x27+0x1]
      dim[0] (rank): 3  [0x28+0x2]
      dim[1]: 4  [0x2a+0x2]
      dim[2]: 5  [0x2c+0x2]
      dim[3]: 6  [0x2e+0x2]
      dim[4]: 1  [0x30+0x2]
      dim[5]: 1  [0x32+0x2]
      dim[6]: 1  [0x34+0x2]
      dim[7]: 1  [0x36+0x2]
      intent_p1: 0  [0x38+0x4]
      intent_p2: 0  [0x3c+0x4]
      intent_p3: 0  [0x40+0x4]
      intent_code: none (0x0)  [0x44+0x2]
      datatype: float32 (0x10)  [0x46+0x2]
      bitpix: 0  [0x48+0x2]
      slice_start: 0  [0x4a+0x2]
      pixdim[0] (qfac): 0  [0x4c+0x4]
      pixdim[1]: 0  [0x50+0x4]
      pixdim[2]: 0  [0x54+0x4]
      pixdim[3]: 0  [0x58+0x4]
      pixdim[4]: 0  [0x5c+0x4]
      pixdim[5]: 0  [0x60+0x4]
      pixdim[6]: 0  [0x64+0x4]
      pixdim[7]: 0  [0x68+0x4]
      vox_offset: 352  [0x6c+0x4]
      scl_slope: 0  [0x70+0x4]
      scl_inter: 0  [0x74+0x4]
      slice_end: 0  [0x78+0x2]
      slice_code: unknown (0x0)  [0x7a+0x1]
      xyzt_units: 0x0 — space unknown, time unknown  [0x7b+0x1]
      cal_max: 0  [0x7c+0x4]
      cal_min: 0  [0x80+0x4]
      slice_duration: 0  [0x84+0x4]
      toffset: 0  [0x88+0x4]
      glmax (unused): 0  [0x8c+0x4]
      glmin (unused): 0  [0x90+0x4]
      descrip: "fillyfoal phantom"  [0x94+0x50]
      aux_file: ""  [0xe4+0x18]
      qform_code: unknown (0x0)  [0xfc+0x2]
      sform_code: unknown (0x0)  [0xfe+0x2]
      quatern_b: 0  [0x100+0x4]
      quatern_c: 0  [0x104+0x4]
      quatern_d: 0  [0x108+0x4]
      qoffset_x: 0  [0x10c+0x4]
      qoffset_y: 0  [0x110+0x4]
      qoffset_z: 0  [0x114+0x4]
      srow_x[0]: 0  [0x118+0x4]
      srow_x[1]: 0  [0x11c+0x4]
      srow_x[2]: 0  [0x120+0x4]
      srow_x[3]: 0  [0x124+0x4]
      srow_y[0]: 0  [0x128+0x4]
      srow_y[1]: 0  [0x12c+0x4]
      srow_y[2]: 0  [0x130+0x4]
      srow_y[3]: 0  [0x134+0x4]
      srow_z[0]: 0  [0x138+0x4]
      srow_z[1]: 0  [0x13c+0x4]
      srow_z[2]: 0  [0x140+0x4]
      srow_z[3]: 0  [0x144+0x4]
      intent_name: ""  [0x148+0x10]
      magic: "n+1"  [0x158+0x4]
    Dimensions: "4×5×6" — rank 3, 120 voxels  [0x28+0x10]
    Voxel size: "" — space unknown, time unknown  [0x4c+0x20]
    Data type: float32 (0x10) — 0 bits per voxel  [0x46+0x4]
      ! warning: bitpix 0 does not match the datatype
    qform: unknown (0x0)  [0xfc+0x2]
    sform: unknown (0x0)  [0xfe+0x2]
    Description: "fillyfoal phantom"  [0x94+0x50]
    Extensions: 00 00 00 00  |....| — none  [0x15c+0x4]
  ▾ Voxel data — 120 × float32  [0x160+0x1e0]
      [0,0,0]: 0  [0x160+0x4]
      [1,0,0]: 0  [0x164+0x4]
      [2,0,0]: 0  [0x168+0x4]
      [3,0,0]: 0  [0x16c+0x4]
      [0,1,0]: 0  [0x170+0x4]
      [1,1,0]: 0  [0x174+0x4]
      [2,1,0]: 0  [0x178+0x4]
      [3,1,0]: 0  [0x17c+0x4]
      [0,2,0]: 0  [0x180+0x4]
      [1,2,0]: 0  [0x184+0x4]
      [2,2,0]: 0  [0x188+0x4]
      [3,2,0]: 0  [0x18c+0x4]
      [0,3,0]: 0  [0x190+0x4]
      [1,3,0]: 0  [0x194+0x4]
      [2,3,0]: 0  [0x198+0x4]
      [3,3,0]: 0  [0x19c+0x4]
      [0,4,0]: 0  [0x1a0+0x4]
      [1,4,0]: 0  [0x1a4+0x4]
      [2,4,0]: 0  [0x1a8+0x4]
      [3,4,0]: 0  [0x1ac+0x4]
      [0,0,1]: 0  [0x1b0+0x4]
      [1,0,1]: 0  [0x1b4+0x4]
      [2,0,1]: 0  [0x1b8+0x4]
      [3,0,1]: 0  [0x1bc+0x4]
      [0,1,1]: 0  [0x1c0+0x4]
      [1,1,1]: 0  [0x1c4+0x4]
      [2,1,1]: 0  [0x1c8+0x4]
      [3,1,1]: 0  [0x1cc+0x4]
      [0,2,1]: 0  [0x1d0+0x4]
      [1,2,1]: 0  [0x1d4+0x4]
      [2,2,1]: 0  [0x1d8+0x4]
      [3,2,1]: 0  [0x1dc+0x4]
      [0,3,1]: 0  [0x1e0+0x4]
      [1,3,1]: 0  [0x1e4+0x4]
      [2,3,1]: 0  [0x1e8+0x4]
      [3,3,1]: 0  [0x1ec+0x4]
      [0,4,1]: 0  [0x1f0+0x4]
      [1,4,1]: 0  [0x1f4+0x4]
      [2,4,1]: 0  [0x1f8+0x4]
      [3,4,1]: 0  [0x1fc+0x4]
      [0,0,2]: 0  [0x200+0x4]
      [1,0,2]: 0  [0x204+0x4]
      [2,0,2]: 0  [0x208+0x4]
      [3,0,2]: 0  [0x20c+0x4]
      [0,1,2]: 0  [0x210+0x4]
      [1,1,2]: 0  [0x214+0x4]
      [2,1,2]: 0  [0x218+0x4]
      [3,1,2]: 0  [0x21c+0x4]
      [0,2,2]: 0  [0x220+0x4]
      [1,2,2]: 0  [0x224+0x4]
      [2,2,2]: 0  [0x228+0x4]
      [3,2,2]: 0  [0x22c+0x4]
      [0,3,2]: 0  [0x230+0x4]
      [1,3,2]: 0  [0x234+0x4]
      [2,3,2]: 0  [0x238+0x4]
      [3,3,2]: 0  [0x23c+0x4]
      [0,4,2]: 0  [0x240+0x4]
      [1,4,2]: 0  [0x244+0x4]
      [2,4,2]: 0  [0x248+0x4]
      [3,4,2]: 0  [0x24c+0x4]
      [0,0,3]: 0  [0x250+0x4]
      [1,0,3]: 0  [0x254+0x4]
      [2,0,3]: 0  [0x258+0x4]
      [3,0,3]: 0  [0x25c+0x4]
      [0,1,3]: 0  [0x260+0x4]
      [1,1,3]: 0  [0x264+0x4]
      [2,1,3]: 0  [0x268+0x4]
      [3,1,3]: 0  [0x26c+0x4]
      [0,2,3]: 0  [0x270+0x4]
      [1,2,3]: 0  [0x274+0x4]
      [2,2,3]: 0  [0x278+0x4]
      [3,2,3]: 0  [0x27c+0x4]
      [0,3,3]: 0  [0x280+0x4]
      [1,3,3]: 0  [0x284+0x4]
      [2,3,3]: 0  [0x288+0x4]
      [3,3,3]: 0  [0x28c+0x4]
      [0,4,3]: 0  [0x290+0x4]
      [1,4,3]: 0  [0x294+0x4]
      [2,4,3]: 0  [0x298+0x4]
      [3,4,3]: 0  [0x29c+0x4]
      [0,0,4]: 0  [0x2a0+0x4]
      [1,0,4]: 0  [0x2a4+0x4]
      [2,0,4]: 0  [0x2a8+0x4]
      [3,0,4]: 0  [0x2ac+0x4]
      [0,1,4]: 0  [0x2b0+0x4]
      [1,1,4]: 0  [0x2b4+0x4]
      [2,1,4]: 0  [0x2b8+0x4]
      [3,1,4]: 0  [0x2bc+0x4]
      [0,2,4]: 0  [0x2c0+0x4]
      [1,2,4]: 0  [0x2c4+0x4]
      [2,2,4]: 0  [0x2c8+0x4]
      [3,2,4]: 0  [0x2cc+0x4]
      [0,3,4]: 0  [0x2d0+0x4]
      [1,3,4]: 0  [0x2d4+0x4]
      [2,3,4]: 0  [0x2d8+0x4]
      [3,3,4]: 0  [0x2dc+0x4]
      [0,4,4]: 0  [0x2e0+0x4]
      [1,4,4]: 0  [0x2e4+0x4]
      [2,4,4]: 0  [0x2e8+0x4]
      [3,4,4]: 0  [0x2ec+0x4]
      [0,0,5]: 0  [0x2f0+0x4]
      [1,0,5]: 0  [0x2f4+0x4]
      [2,0,5]: 0  [0x2f8+0x4]
      [3,0,5]: 0  [0x2fc+0x4]
      [0,1,5]: 0  [0x300+0x4]
      [1,1,5]: 0  [0x304+0x4]
      [2,1,5]: 0  [0x308+0x4]
      [3,1,5]: 0  [0x30c+0x4]
      [0,2,5]: 0  [0x310+0x4]
      [1,2,5]: 0  [0x314+0x4]
      [2,2,5]: 0  [0x318+0x4]
      [3,2,5]: 0  [0x31c+0x4]
      [0,3,5]: 0  [0x320+0x4]
      [1,3,5]: 0  [0x324+0x4]
      [2,3,5]: 0  [0x328+0x4]
      [3,3,5]: 0  [0x32c+0x4]
      [0,4,5]: 0  [0x330+0x4]
      [1,4,5]: 0  [0x334+0x4]
      [2,4,5]: 0  [0x338+0x4]
      [3,4,5]: 0  [0x33c+0x4]
