tests/snapshots/formats__nifti__pair.hdr.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ pair.hdr — NIfTI-1 header, 2×2×2 uint8, 2×2×2.5, "pair header", voxels in the .img file  [0x0+0x15c]
  ▾ Header — NIfTI-1, 348 bytes, little-endian  [0x0+0x15c]
      sizeof_hdr: 348  [0x0+0x4]
      data_type (unused): ""  [0x4+0xa]
      db_name (unused): ""  [0xe+0x12]
      extents (unused): 0  [0x20+0x4]
      session_error (unused): 0  [0x24+0x2]
      regular (unused): 0  [0x26+0x1]
      dim_info: 0x0 — frequency unknown, phase unknown, slice unknown  [0x27+0x1]
      dim[0] (rank): 3  [0x28+0x2]
      dim[1]: 2  [0x2a+0x2]
      dim[2]: 2  [0x2c+0x2]
      dim[3]: 2  [0x2e+0x2]
      dim[4]: 1  [0x30+0x2]
      dim[5]: 1  [0x32+0x2]
      dim[6]: 1  [0x34+0x2]
      dim[7]: 1  [0x36+0x2]
      intent_p1: 0  [0x38+0x4]
      intent_p2: 0  [0x3c+0x4]
      intent_p3: 0  [0x40+0x4]
      intent_code: none (0x0)  [0x44+0x2]
      datatype: uint8 (0x2)  [0x46+0x2]
      bitpix: 8  [0x48+0x2]
      slice_start: 0  [0x4a+0x2]
      pixdim[0] (qfac): -1  [0x4c+0x4]
      pixdim[1]: 2  [0x50+0x4]
      pixdim[2]: 2  [0x54+0x4]
      pixdim[3]: 2.5  [0x58+0x4]
      pixdim[4]: 1  [0x5c+0x4]
      pixdim[5]: 1  [0x60+0x4]
      pixdim[6]: 1  [0x64+0x4]
      pixdim[7]: 1  [0x68+0x4]
      vox_offset: 0  [0x6c+0x4]
      scl_slope: 1  [0x70+0x4]
      scl_inter: 0  [0x74+0x4]
      slice_end: 0  [0x78+0x2]
      slice_code: unknown (0x0)  [0x7a+0x1]
      xyzt_units: 0x0 — space unknown, time unknown  [0x7b+0x1]
      cal_max: 0  [0x7c+0x4]
      cal_min: 0  [0x80+0x4]
      slice_duration: 0  [0x84+0x4]
      toffset: 0  [0x88+0x4]
      glmax (unused): 0  [0x8c+0x4]
      glmin (unused): 0  [0x90+0x4]
      descrip: "pair header"  [0x94+0x50]
      aux_file: ""  [0xe4+0x18]
      qform_code: unknown (0x0)  [0xfc+0x2]
      sform_code: aligned anatomical (0x2)  [0xfe+0x2]
      quatern_b: 0  [0x100+0x4]
      quatern_c: 1  [0x104+0x4]
      quatern_d: 0  [0x108+0x4]
      qoffset_x: 90  [0x10c+0x4]
      qoffset_y: -126  [0x110+0x4]
      qoffset_z: -72  [0x114+0x4]
      srow_x[0]: -2  [0x118+0x4]
      srow_x[1]: 0  [0x11c+0x4]
      srow_x[2]: 0  [0x120+0x4]
      srow_x[3]: 90  [0x124+0x4]
      srow_y[0]: 0  [0x128+0x4]
      srow_y[1]: 2  [0x12c+0x4]
      srow_y[2]: 0  [0x130+0x4]
      srow_y[3]: -126  [0x134+0x4]
      srow_z[0]: 0  [0x138+0x4]
      srow_z[1]: 0  [0x13c+0x4]
      srow_z[2]: 2.5  [0x140+0x4]
      srow_z[3]: -72  [0x144+0x4]
      intent_name: ""  [0x148+0x10]
      magic: "ni1"  [0x158+0x4]
    Dimensions: "2×2×2" — rank 3, 8 voxels  [0x28+0x10]
    Voxel size: "2×2×2.5" — space unknown, time unknown  [0x4c+0x20]
    Data type: uint8 (0x2) — 8 bits per voxel  [0x46+0x4]
    qform: unknown (0x0)  [0xfc+0x2]
  ▾ sform: aligned anatomical (0x2) — [-2, 0, 0, 90] [0, 2, 0, -126] [0, 0, 2.5, -72]  [0xfe+0x2]
      Row x: "[-2, 0, 0, 90]"  [0x118+0x10]
      Row y: "[0, 2, 0, -126]"  [0x128+0x10]
      Row z: "[0, 0, 2.5, -72]"  [0x138+0x10]
    Description: "pair header"  [0x94+0x50]
    Voxel data: "separate file" — 8 bytes in the companion .img file, from offset 0
