tests/snapshots/formats__nifti__series.nii.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ series.nii — NIfTI-1, 4×3×2×2 int16, 2×2×2.5 mm, TR 2 s, 2 extension(s), "fillyfoal nibabel phantom"  [0x0+0x260]
  ▾ Header — NIfTI-1, 348 bytes, little-endian  [0x0+0x15c]
      sizeof_hdr: 348  [0x0+0x4]
      data_type (unused): ""  [0x4+0xa]
      db_name (unused): ""  [0xe+0x12]
      extents (unused): 0  [0x20+0x4]
      session_error (unused): 0  [0x24+0x2]
      regular (unused): 0  [0x26+0x1]
      dim_info: 0x39 — frequency dim 1, phase dim 2, slice dim 3  [0x27+0x1]
      dim[0] (rank): 4  [0x28+0x2]
      dim[1]: 4  [0x2a+0x2]
      dim[2]: 3  [0x2c+0x2]
      dim[3]: 2  [0x2e+0x2]
      dim[4]: 2  [0x30+0x2]
      dim[5]: 1  [0x32+0x2]
      dim[6]: 1  [0x34+0x2]
      dim[7]: 1  [0x36+0x2]
      intent_p1: 0  [0x38+0x4]
      intent_p2: 0  [0x3c+0x4]
      intent_p3: 0  [0x40+0x4]
      intent_code: none (0x0)  [0x44+0x2]
      datatype: int16 (0x4)  [0x46+0x2]
      bitpix: 16  [0x48+0x2]
      slice_start: 0  [0x4a+0x2]
      pixdim[0] (qfac): -1  [0x4c+0x4]
      pixdim[1]: 2  [0x50+0x4]
      pixdim[2]: 2  [0x54+0x4]
      pixdim[3]: 2.5  [0x58+0x4]
      pixdim[4]: 2  [0x5c+0x4]
      pixdim[5]: 1  [0x60+0x4]
      pixdim[6]: 1  [0x64+0x4]
      pixdim[7]: 1  [0x68+0x4]
      vox_offset: 512  [0x6c+0x4]
      scl_slope: 0.5  [0x70+0x4]
      scl_inter: 10  [0x74+0x4]
      slice_end: 1  [0x78+0x2]
      slice_code: sequential increasing (0x1)  [0x7a+0x1]
      xyzt_units: 0xa — space mm, time s  [0x7b+0x1]
      cal_max: 120  [0x7c+0x4]
      cal_min: -40  [0x80+0x4]
      slice_duration: 1  [0x84+0x4]
      toffset: 0.25  [0x88+0x4]
      glmax (unused): 0  [0x8c+0x4]
      glmin (unused): 0  [0x90+0x4]
      descrip: "fillyfoal nibabel phantom"  [0x94+0x50]
      aux_file: "phantom.lut"  [0xe4+0x18]
      qform_code: scanner anatomical (0x1)  [0xfc+0x2]
      sform_code: MNI 152 (0x4)  [0xfe+0x2]
      quatern_b: 0  [0x100+0x4]
      quatern_c: 1  [0x104+0x4]
      quatern_d: 0  [0x108+0x4]
      qoffset_x: 90  [0x10c+0x4]
      qoffset_y: -126  [0x110+0x4]
      qoffset_z: -72  [0x114+0x4]
      srow_x[0]: -2  [0x118+0x4]
      srow_x[1]: 0  [0x11c+0x4]
      srow_x[2]: 0  [0x120+0x4]
      srow_x[3]: 90  [0x124+0x4]
      srow_y[0]: 0  [0x128+0x4]
      srow_y[1]: 2  [0x12c+0x4]
      srow_y[2]: 0  [0x130+0x4]
      srow_y[3]: -126  [0x134+0x4]
      srow_z[0]: 0  [0x138+0x4]
      srow_z[1]: 0  [0x13c+0x4]
      srow_z[2]: 2.5  [0x140+0x4]
      srow_z[3]: -72  [0x144+0x4]
      intent_name: ""  [0x148+0x10]
      magic: "n+1"  [0x158+0x4]
    Dimensions: "4×3×2×2" — rank 4, 48 voxels  [0x28+0x10]
    Voxel size: "2×2×2.5 mm, TR 2 s" — space mm, time s  [0x4c+0x20]
    Data type: int16 (0x4) — 16 bits per voxel  [0x46+0x4]
    Scaling: "value × 0.5 + 10"  [0x70+0x8]
    Display range: "-40 … 120"  [0x7c+0x8]
    Slice timing: sequential increasing (0x1) — slices 0–1, 1 s each, slice dimension 3  [0x7a+0x1]
    Time offset: 0.25  [0x88+0x4]
  ▾ qform: scanner anatomical (0x1) — [-2, 0, 0, 90] [0, 2, 0, -126] [0, 0, 2.5, -72]  [0xfc+0x2]
      Quaternion (b, c, d): "0, 1, 0"  [0x100+0xc]
      Offset (x, y, z): "90, -126, -72"  [0x10c+0xc]
      Row x: "[-2, 0, 0, 90]"
      Row y: "[0, 2, 0, -126]"
      Row z: "[0, 0, 2.5, -72]"
  ▾ sform: MNI 152 (0x4) — [-2, 0, 0, 90] [0, 2, 0, -126] [0, 0, 2.5, -72]  [0xfe+0x2]
      Row x: "[-2, 0, 0, 90]"  [0x118+0x10]
      Row y: "[0, 2, 0, -126]"  [0x128+0x10]
      Row z: "[0, 0, 2.5, -72]"  [0x138+0x10]
    Description: "fillyfoal nibabel phantom"  [0x94+0x50]
    Auxiliary file: "phantom.lut"  [0xe4+0x18]
  ▾ Extensions — 2 extension(s)  [0x15c+0xa4]
    ▾ Extension 0: AFNI (0x4) — 128 bytes  [0x160+0x80]
        esize: 128  [0x160+0x4]
        ecode: AFNI (0x4)  [0x164+0x4]
      ▾ Data — XML document, root <AFNI_attributes>  [0x168+0x71]
        ▾ XML declaration  [0x168+0x16]
            Version: "1.0"  [0x177+0x3]
        ▾ AFNI_attributes — self_idcode="XYZ_fillyfoal" NIfTI_nums="4,3,2,2,1,4"  [0x17f+0x59]
            @self_idcode: "XYZ_fillyfoal"  [0x19d+0xd]
            @NIfTI_nums: "4,3,2,2,1,4"  [0x1b8+0xb]
        Padding  [0x1d9+0x7]
    ▾ Extension 1: comment (0x6) — 32 bytes  [0x1e0+0x20]
        esize: 32  [0x1e0+0x4]
        ecode: comment (0x6)  [0x1e4+0x4]
        Text: "made by fillyfoal tests"  [0x1e8+0x17]
        Padding  [0x1ff+0x1]
  ▾ Voxel data — 48 × int16  [0x200+0x60]
      [0,0,0,0]: -40 — = -10  [0x200+0x2]
      [1,0,0,0]: 44 — = 32  [0x202+0x2]
      [2,0,0,0]: 128 — = 74  [0x204+0x2]
      [3,0,0,0]: 212 — = 116  [0x206+0x2]
      [0,1,0,0]: -12 — = 4  [0x208+0x2]
      [1,1,0,0]: 72 — = 46  [0x20a+0x2]
      [2,1,0,0]: 156 — = 88  [0x20c+0x2]
      [3,1,0,0]: 240 — = 130  [0x20e+0x2]
      [0,2,0,0]: 16 — = 18  [0x210+0x2]
      [1,2,0,0]: 100 — = 60  [0x212+0x2]
      [2,2,0,0]: 184 — = 102  [0x214+0x2]
      [3,2,0,0]: 268 — = 144  [0x216+0x2]
      [0,0,1,0]: -26 — = -3  [0x218+0x2]
      [1,0,1,0]: 58 — = 39  [0x21a+0x2]
      [2,0,1,0]: 142 — = 81  [0x21c+0x2]
      [3,0,1,0]: 226 — = 123  [0x21e+0x2]
      [0,1,1,0]: 2 — = 11  [0x220+0x2]
      [1,1,1,0]: 86 — = 53  [0x222+0x2]
      [2,1,1,0]: 170 — = 95  [0x224+0x2]
      [3,1,1,0]: 254 — = 137  [0x226+0x2]
      [0,2,1,0]: 30 — = 25  [0x228+0x2]
      [1,2,1,0]: 114 — = 67  [0x22a+0x2]
      [2,2,1,0]: 198 — = 109  [0x22c+0x2]
      [3,2,1,0]: 282 — = 151  [0x22e+0x2]
      [0,0,0,1]: -33 — = -6.5  [0x230+0x2]
      [1,0,0,1]: 51 — = 35.5  [0x232+0x2]
      [2,0,0,1]: 135 — = 77.5  [0x234+0x2]
      [3,0,0,1]: 219 — = 119.5  [0x236+0x2]
      [0,1,0,1]: -5 — = 7.5  [0x238+0x2]
      [1,1,0,1]: 79 — = 49.5  [0x23a+0x2]
      [2,1,0,1]: 163 — = 91.5  [0x23c+0x2]
      [3,1,0,1]: 247 — = 133.5  [0x23e+0x2]
      [0,2,0,1]: 23 — = 21.5  [0x240+0x2]
      [1,2,0,1]: 107 — = 63.5  [0x242+0x2]
      [2,2,0,1]: 191 — = 105.5  [0x244+0x2]
      [3,2,0,1]: 275 — = 147.5  [0x246+0x2]
      [0,0,1,1]: -19 — = 0.5  [0x248+0x2]
      [1,0,1,1]: 65 — = 42.5  [0x24a+0x2]
      [2,0,1,1]: 149 — = 84.5  [0x24c+0x2]
      [3,0,1,1]: 233 — = 126.5  [0x24e+0x2]
      [0,1,1,1]: 9 — = 14.5  [0x250+0x2]
      [1,1,1,1]: 93 — = 56.5  [0x252+0x2]
      [2,1,1,1]: 177 — = 98.5  [0x254+0x2]
      [3,1,1,1]: 261 — = 140.5  [0x256+0x2]
      [0,2,1,1]: 37 — = 28.5  [0x258+0x2]
      [1,2,1,1]: 121 — = 70.5  [0x25a+0x2]
      [2,2,1,1]: 205 — = 112.5  [0x25c+0x2]
      [3,2,1,1]: 289 — = 154.5  [0x25e+0x2]
