tests/snapshots/formats__nifti__volume2.nii.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ volume2.nii — NIfTI-2, 5×4×3 uint16, 2×2×2.5 mm, 1 extension(s), "fillyfoal nifti-2"  [0x0+0x2b8]
  ▾ Header — NIfTI-2, 540 bytes, little-endian  [0x0+0x21c]
      sizeof_hdr: 540  [0x0+0x4]
      magic: 6e 2b 32 00 0d 0a 1a 0a  |n+2.....|  [0x4+0x8]
      datatype: uint16 (0x200)  [0xc+0x2]
      bitpix: 16  [0xe+0x2]
      dim[0] (rank): 3  [0x10+0x8]
      dim[1]: 5  [0x18+0x8]
      dim[2]: 4  [0x20+0x8]
      dim[3]: 3  [0x28+0x8]
      dim[4]: 1  [0x30+0x8]
      dim[5]: 1  [0x38+0x8]
      dim[6]: 1  [0x40+0x8]
      dim[7]: 1  [0x48+0x8]
      intent_p1: 0  [0x50+0x8]
      intent_p2: 0  [0x58+0x8]
      intent_p3: 0  [0x60+0x8]
      pixdim[0] (qfac): -1  [0x68+0x8]
      pixdim[1]: 2  [0x70+0x8]
      pixdim[2]: 2  [0x78+0x8]
      pixdim[3]: 2.5  [0x80+0x8]
      pixdim[4]: 1  [0x88+0x8]
      pixdim[5]: 1  [0x90+0x8]
      pixdim[6]: 1  [0x98+0x8]
      pixdim[7]: 1  [0xa0+0x8]
      vox_offset: 576  [0xa8+0x8]
      scl_slope: 1  [0xb0+0x8]
      scl_inter: 0  [0xb8+0x8]
      cal_max: 0  [0xc0+0x8]
      cal_min: 0  [0xc8+0x8]
      slice_duration: 0  [0xd0+0x8]
      toffset: 0  [0xd8+0x8]
      slice_start: 0  [0xe0+0x8]
      slice_end: 0  [0xe8+0x8]
      descrip: "fillyfoal nifti-2"  [0xf0+0x50]
      aux_file: ""  [0x140+0x18]
      qform_code: aligned anatomical (0x2)  [0x158+0x4]
      sform_code: aligned anatomical (0x2)  [0x15c+0x4]
      quatern_b: 0  [0x160+0x8]
      quatern_c: 1  [0x168+0x8]
      quatern_d: 0  [0x170+0x8]
      qoffset_x: 90  [0x178+0x8]
      qoffset_y: -126  [0x180+0x8]
      qoffset_z: -72  [0x188+0x8]
      srow_x[0]: -2  [0x190+0x8]
      srow_x[1]: 0  [0x198+0x8]
      srow_x[2]: 0  [0x1a0+0x8]
      srow_x[3]: 90  [0x1a8+0x8]
      srow_y[0]: 0  [0x1b0+0x8]
      srow_y[1]: 2  [0x1b8+0x8]
      srow_y[2]: 0  [0x1c0+0x8]
      srow_y[3]: -126  [0x1c8+0x8]
      srow_z[0]: 0  [0x1d0+0x8]
      srow_z[1]: 0  [0x1d8+0x8]
      srow_z[2]: 2.5  [0x1e0+0x8]
      srow_z[3]: -72  [0x1e8+0x8]
      slice_code: unknown (0x0)  [0x1f0+0x4]
      xyzt_units: 2 — space mm, time unknown  [0x1f4+0x4]
      intent_code: none (0x0)  [0x1f8+0x4]
      intent_name: ""  [0x1fc+0x10]
      dim_info: 0x0 — frequency unknown, phase unknown, slice unknown  [0x20c+0x1]
      unused_str: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |...............|  [0x20d+0xf]
    Dimensions: "5×4×3" — rank 3, 60 voxels  [0x10+0x40]
    Voxel size: "2×2×2.5 mm" — space mm, time unknown  [0x68+0x40]
    Data type: uint16 (0x200) — 16 bits per voxel  [0xc+0x4]
  ▾ qform: aligned anatomical (0x2) — [-2, 0, 0, 90] [0, 2, 0, -126] [0, 0, 2.5, -72]  [0x158+0x4]
      Quaternion (b, c, d): "0, 1, 0"  [0x160+0x18]
      Offset (x, y, z): "90, -126, -72"  [0x178+0x18]
      Row x: "[-2, 0, 0, 90]"
      Row y: "[0, 2, 0, -126]"
      Row z: "[0, 0, 2.5, -72]"
  ▾ sform: aligned anatomical (0x2) — [-2, 0, 0, 90] [0, 2, 0, -126] [0, 0, 2.5, -72]  [0x15c+0x4]
      Row x: "[-2, 0, 0, 90]"  [0x190+0x20]
      Row y: "[0, 2, 0, -126]"  [0x1b0+0x20]
      Row z: "[0, 0, 2.5, -72]"  [0x1d0+0x20]
    Description: "fillyfoal nifti-2"  [0xf0+0x50]
  ▾ Extensions — 1 extension(s)  [0x21c+0x24]
    ▾ Extension 0: comment (0x6) — 32 bytes  [0x220+0x20]
        esize: 32  [0x220+0x4]
        ecode: comment (0x6)  [0x224+0x4]
        Text: "nifti-2 comment"  [0x228+0xf]
        Padding  [0x237+0x9]
  ▾ Voxel data — 60 × uint16  [0x240+0x78]
      [0,0,0]: 0  [0x240+0x2]
      [1,0,0]: 12  [0x242+0x2]
      [2,0,0]: 24  [0x244+0x2]
      [3,0,0]: 36  [0x246+0x2]
      [4,0,0]: 48  [0x248+0x2]
      [0,1,0]: 3  [0x24a+0x2]
      [1,1,0]: 15  [0x24c+0x2]
      [2,1,0]: 27  [0x24e+0x2]
      [3,1,0]: 39  [0x250+0x2]
      [4,1,0]: 51  [0x252+0x2]
      [0,2,0]: 6  [0x254+0x2]
      [1,2,0]: 18  [0x256+0x2]
      [2,2,0]: 30  [0x258+0x2]
      [3,2,0]: 42  [0x25a+0x2]
      [4,2,0]: 54  [0x25c+0x2]
      [0,3,0]: 9  [0x25e+0x2]
      [1,3,0]: 21  [0x260+0x2]
      [2,3,0]: 33  [0x262+0x2]
      [3,3,0]: 45  [0x264+0x2]
      [4,3,0]: 57  [0x266+0x2]
      [0,0,1]: 1  [0x268+0x2]
      [1,0,1]: 13  [0x26a+0x2]
      [2,0,1]: 25  [0x26c+0x2]
      [3,0,1]: 37  [0x26e+0x2]
      [4,0,1]: 49  [0x270+0x2]
      [0,1,1]: 4  [0x272+0x2]
      [1,1,1]: 16  [0x274+0x2]
      [2,1,1]: 28  [0x276+0x2]
      [3,1,1]: 40  [0x278+0x2]
      [4,1,1]: 52  [0x27a+0x2]
      [0,2,1]: 7  [0x27c+0x2]
      [1,2,1]: 19  [0x27e+0x2]
      [2,2,1]: 31  [0x280+0x2]
      [3,2,1]: 43  [0x282+0x2]
      [4,2,1]: 55  [0x284+0x2]
      [0,3,1]: 10  [0x286+0x2]
      [1,3,1]: 22  [0x288+0x2]
      [2,3,1]: 34  [0x28a+0x2]
      [3,3,1]: 46  [0x28c+0x2]
      [4,3,1]: 58  [0x28e+0x2]
      [0,0,2]: 2  [0x290+0x2]
      [1,0,2]: 14  [0x292+0x2]
      [2,0,2]: 26  [0x294+0x2]
      [3,0,2]: 38  [0x296+0x2]
      [4,0,2]: 50  [0x298+0x2]
      [0,1,2]: 5  [0x29a+0x2]
      [1,1,2]: 17  [0x29c+0x2]
      [2,1,2]: 29  [0x29e+0x2]
      [3,1,2]: 41  [0x2a0+0x2]
      [4,1,2]: 53  [0x2a2+0x2]
      [0,2,2]: 8  [0x2a4+0x2]
      [1,2,2]: 20  [0x2a6+0x2]
      [2,2,2]: 32  [0x2a8+0x2]
      [3,2,2]: 44  [0x2aa+0x2]
      [4,2,2]: 56  [0x2ac+0x2]
      [0,3,2]: 11  [0x2ae+0x2]
      [1,3,2]: 23  [0x2b0+0x2]
      [2,3,2]: 35  [0x2b2+0x2]
      [3,3,2]: 47  [0x2b4+0x2]
      [4,3,2]: 59  [0x2b6+0x2]
